tests/ui/impl-trait/issues/issue-84073.stderr
error[E0282]: type annotations needed for `RaceBuilder<T, Never<T>>`
  --> $DIR/issue-84073.rs:32:16
   |
LL |     Race::new(|race| race.when());
   |                ^^^^  ---- type must be known at this point
   |
help: consider giving this closure parameter an explicit type, where the type for type parameter `T` is specified
   |
LL |     Race::new(|race: RaceBuilder<T, Never<T>>| race.when());
   |                    ++++++++++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
